# ocassion

./: .gitignore  Cargo.toml  README.md  devenv.nix  flake.nix  module.nix  ocassions.schema.json  occasions.schema.json
.github/ISSUE_TEMPLATE/: thing.md
.github/workflows/: ci.yaml  deploy.yaml  milestone-close.yaml
src/: config.rs  errors.rs  formatting.rs  lib.rs  main.rs  time.rs
tests/: common.rs  integration.rs
