[package]
name = "occasion"
description = "Shows one (or many) messages when run during a configured timeframe. Useful to have in your status bar for example."
readme = "README.md"
repository = "https://github.com/itscrystalline/occasion"
version = "0.2.0"
edition = "2024"
license = "Unlicense"
categories = ["command-line-utilities"]

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
colored = "3"
dirs = "6.0.0"
map-macro = { version = "0.3.0", features = ["std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
temp-env = "0.3.6"
thiserror = "2.0.12"
