[package]
name = "occasion"
description = "Shows one (or many) messages when run during a configured timeframe. Useful to have in your status bar for example."
readme = "README.md"
repository = "https://github.com/itscrystalline/occasion"
version = "0.3.0"
edition = "2024"
license = "Unlicense"
categories = ["command-line-utilities"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target-family }-{ target-arch }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target-family }-{ target-arch }.zip"
pkg-fmt = "zip"
[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target-family }-{ target-arch }.zip"
pkg-fmt = "zip"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.37", features = ["derive"] }
clap_derive = { version = "4.0.0-rc.1" }
colored = "3"
dirs = "6.0.0"
evalexpr = "12.0.2"
fastrand = "2.3.0"
map-macro = { version = "0.3.0", features = ["std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
temp-env = "0.3.6"
thiserror = "2.0.12"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
lto = true
codegen-units = 1
